ASUSFETest/src/objects/FAQ__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Articles containing lists of questions and answers.</description>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Article Answer Content</description>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Expiration_Date__c</fullName>
        <description>Date in which article will expire and content needs to be reviewed.</description>
        <label>Article Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_until_expires__c</fullName>
        <formula>Article_Expiration_Date__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days until expires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Functional_Group__c</fullName>
        <description>Group which owns and maintains the article.</description>
        <inlineHelpText>Group which owns and maintains the article.</inlineHelpText>
        <label>Functional Group</label>
        <picklist>
            <picklistValues>
                <fullName>Academic Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admission Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASU Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulton Schools of Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Int&apos;l Students and Scholars Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mary Lou Fulton Teachers College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking and Transit Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provost Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Letters and Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Card Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University Academic Success Programs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Article Question Content</description>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>FAQ</label>
    <pluralLabel>FAQ</pluralLabel>
</CustomObject>